# accel-raytracer

./: .gitignore  CMakeLists.txt  README.md  run.sh
docs/: references.bib  report.md
docs/images/: report.md
src/core/: CMakeLists.txt  Camera.cpp  Camera.hpp  HitRecord.hpp  IHittable.hpp  IMaterial.hpp  Materials.hpp  PPMWriter.cpp  PPMWriter.hpp  RNGState.cpp  RNGState.hpp  Ray.hpp  Sphere.cpp  Sphere.hpp  World.cpp  World.hpp  core.cpp  core.hpp  cuda_compat.hpp  hash.hpp  random.hpp  types.hpp
src/cpu/: CMakeLists.txt  main.cpp
src/cuda/: CMakeLists.txt  main.cu
